wip: fix scrollbar on TableEditor

--- a/src/renderer/src/components/repository-workspace/RepositoryWorkspace/RepositoryWorkspace.css
+++ b/src/renderer/src/components/repository-workspace/RepositoryWorkspace/RepositoryWorkspace.css
@@ -11,18 +11,17 @@
   flex-basis: 250px;
 }
 
-.repository-workspace .table-workspace {
-  flex-grow: 1;
-}
-
 .tab-group {
   display: flex;
   flex-direction: column;
-  align-content: stretch;
+  align-items: stretch;
 
   width: 100%;
+  /* height: 100%; */
 
   --material-symbol-color-hover: var(--color-secondary-hover);
+
+  overflow: hidden;
 }
 
 .tab-group .tab-list {
@@ -53,4 +52,14 @@
   background-color: white;
   color: var(--color-primary);
   border-bottom: none;
+}
+
+.tab-group .tab-panels {
+  display: flex;
+  overflow: hidden;
+}
+
+.tab-group [id^="headlessui-tabs-panel"] {
+  display: flex;
+  overflow: hidden;
 }
