--- a/src/renderer/src/components/repository-workspace/TableWorkspace/TableWorkspace.css
+++ b/src/renderer/src/components/repository-workspace/TableWorkspace/TableWorkspace.css
@@ -1,4 +1,9 @@
+/*
+! In order for TableEditor to work properly (with vertical scrollbar that appears correctly), all its parents and ancestors
+! should have display:flex; and overflow:hidden;
+! I also think they should not have height: 100%
+*/
+
 .table-workspace {
-  padding-top: var(--padding);
   overflow: hidden;
 }
